# Analise_Credito

./: README.md  pyproject.toml
Code/: config.py  data_analisys.ipynb
Data/: credito_pessoal_10000.csv
