[project]
name = "analise-credito"
version = "0.1.0"
description = ""
authors = [
    {name = "LeonArmster",email = "leo.armster1994@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "seaborn (>=0.13.2,<0.14.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "pathlib (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
